--- a/remotech/src/main/resources/application.properties
+++ b/remotech/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=remotech
 # DATABASE CONFIG
 #
 spring.datasource.url=jdbc:mysql://150.254.36.243:3306/ait127810
-spring.datasource.username=ait127810`
+spring.datasource.username=ait127810
 spring.datasource.password=IL127810
 
 #
