make login and product api integration

--- a/remotech/src/main/resources/application.properties
+++ b/remotech/src/main/resources/application.properties
@@ -17,3 +17,8 @@ management.info.build.enabled=true
 #
 spring.security.user.name=debug
 spring.security.user.password=debug
+logging.level.org.springframework.security=DEBUG
+
+#
+# ADDITIONAL CONFIG
+#
